force-app/main/default/objects/Account/fields/External_ID_vod__c.field-meta.xml
<CustomField>
    <fullName>External_ID_vod__c</fullName>
    <label>Customer ID</label>
    <length>120</length>
    <type>Text</type>
</CustomField>