force-app/main/default/objects/Account/fields/IST_Target__c.field-meta.xml
<CustomField>
    <fullName>IST_Target__c</fullName>
    <label>IST Target</label>
    <length>40</length>
    <type>Text</type>
</CustomField>