force-app/main/default/objects/Account/fields/Network_HCO_Status__c.field-meta.xml
<CustomField>
    <fullName>Network_HCO_Status__c</fullName>
    <label>HCO Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>A</fullName><default>false</default><label>A</label></value>
            <value><fullName>C</fullName><default>false</default><label>C</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>