force-app/main/default/objects/Account/fields/Network_Major_Class_of_Trade__c.field-meta.xml
<CustomField>
    <fullName>Network_Major_Class_of_Trade__c</fullName>
    <label>Class of Trade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Ancillary Services</fullName><default>false</default><label>Ancillary Services</label></value>
            <value><fullName>Academic</fullName><default>false</default><label>Academic</label></value>
            <value><fullName>Acute Care</fullName><default>false</default><label>Acute Care</label></value>
            <value><fullName>Ambulatory Care</fullName><default>false</default><label>Ambulatory Care</label></value>
            <value><fullName>Corporate Parent</fullName><default>false</default><label>Corporate Parent</label></value>
            <value><fullName>Correctional Facility</fullName><default>false</default><label>Correctional Facility</label></value>
            <value><fullName>Elder Care</fullName><default>false</default><label>Elder Care</label></value>
            <value><fullName>Emergency</fullName><default>false</default><label>Emergency</label></value>
            <value><fullName>Health Alliance</fullName><default>false</default><label>Health Alliance</label></value>
            <value><fullName>Home Health Care</fullName><default>false</default><label>Home Health Care</label></value>
            <value><fullName>Hospital</fullName><default>false</default><label>Hospital</label></value>
            <value><fullName>Insurance</fullName><default>false</default><label>Insurance</label></value>
            <value><fullName>Laboratory</fullName><default>false</default><label>Laboratory</label></value>
            <value><fullName>Long-Term Care</fullName><default>false</default><label>Long-Term Care</label></value>
            <value><fullName>Managed Care Closed</fullName><default>false</default><label>Managed Care Closed</label></value>
            <value><fullName>Miscellaneous</fullName><default>false</default><label>Miscellaneous</label></value>
            <value><fullName>Outpatient Center</fullName><default>false</default><label>Outpatient Center</label></value>
            <value><fullName>Pharmacy</fullName><default>false</default><label>Pharmacy</label></value>
            <value><fullName>Physician Offices/Clinics</fullName><default>false</default><label>Physician Offices/Clinics</label></value>
            <value><fullName>Research</fullName><default>false</default><label>Research</label></value>
            <value><fullName>Residential</fullName><default>false</default><label>Residential</label></value>
            <value><fullName>Retail</fullName><default>false</default><label>Retail</label></value>
            <value><fullName>Supply</fullName><default>false</default><label>Supply</label></value>
            <value><fullName>Veterinary Medicine</fullName><default>false</default><label>Veterinary Medicine</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>