force-app/main/default/objects/Account/fields/Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Segmentation__c</fullName>
    <label>Segmentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>GPO Pull Through</fullName><default>false</default><label>GPO Pull Through</label></value>
            <value><fullName>Spectrum Heritage</fullName><default>false</default><label>Spectrum Heritage</label></value>
            <value><fullName>Strategic Contractors</fullName><default>false</default><label>Strategic Contractors</label></value>
            <value><fullName>Opportunistic</fullName><default>false</default><label>Opportunistic</label></value>
            <value><fullName>Redeemables</fullName><default>false</default><label>Redeemables</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>