force-app/main/default/objects/Account/fields/SP_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>SP_Account_Type__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>340-B Clinic</fullName><default>false</default><label>340-B Clinic</label></value>
            <value><fullName>340-B Hospital</fullName><default>false</default><label>340-B Hospital</label></value>
            <value><fullName>340-B Other</fullName><default>false</default><label>340-B Other</label></value>
            <value><fullName>Clinic</fullName><default>false</default><label>Clinic</label></value>
            <value><fullName>Federal</fullName><default>false</default><label>Federal</label></value>
            <value><fullName>Hospital</fullName><default>false</default><label>Hospital</label></value>
            <value><fullName>Kaiser</fullName><default>false</default><label>Kaiser</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
            <value><fullName>340-B IDN</fullName><default>false</default><label>340-B IDN</label></value>
            <value><fullName>IDN</fullName><default>false</default><label>IDN</label></value>
            <value><fullName>Child MCO</fullName><default>false</default><label>Child MCO</label></value>
            <value><fullName>Parent MCO</fullName><default>false</default><label>Parent MCO</label></value>
            <value><fullName>PBM</fullName><default>false</default><label>PBM</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>