force-app/main/default/objects/Account/fields/SP_Contract_Driven__c.field-meta.xml
<CustomField>
    <fullName>SP_Contract_Driven__c</fullName>
    <label>Contract Driven</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>