force-app/main/default/objects/Account/fields/SP_Contracting_Entity__c.field-meta.xml
<CustomField>
    <fullName>SP_Contracting_Entity__c</fullName>
    <label>Contracting Entity</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>