force-app/main/default/objects/Account/fields/SP_Decile__c.field-meta.xml
<CustomField>
    <fullName>SP_Decile__c</fullName>
    <label>Decile</label>
    <length>55</length>
    <type>Text</type>
</CustomField>