force-app/main/default/objects/Account/fields/SP_Misc_J_Code__c.field-meta.xml
<CustomField>
    <fullName>SP_Misc_J_Code__c</fullName>
    <label>Misc. J Code</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>