force-app/main/default/objects/Account/fields/SP_OCM__c.field-meta.xml
<CustomField>
    <fullName>SP_OCM__c</fullName>
    <label>OCM</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>