force-app/main/default/objects/Account/fields/SP_P_T_Approval__c.field-meta.xml
<CustomField>
    <fullName>SP_P_T_Approval__c</fullName>
    <label>Does Rolvedon need P+T Approval?</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>