force-app/main/default/objects/Account/fields/SP_Payer_Mix__c.field-meta.xml
<CustomField>
    <fullName>SP_Payer_Mix__c</fullName>
    <label>Commercial/Medicare Mix</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>25/75</fullName><default>false</default><label>25/75</label></value>
            <value><fullName>50/50</fullName><default>false</default><label>50/50</label></value>
            <value><fullName>75/25</fullName><default>false</default><label>75/25</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>