force-app/main/default/objects/Account/fields/SP_Possible_Account_Jumper__c.field-meta.xml
<CustomField>
    <fullName>SP_Possible_Account_Jumper__c</fullName>
    <label>Account Jumper</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>