force-app/main/default/objects/Account/fields/SP_Primary_Wholesaler__c.field-meta.xml
<CustomField>
    <fullName>SP_Primary_Wholesaler__c</fullName>
    <label>Primary Wholesaler</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>ABC</fullName><default>false</default><label>ABC</label></value>
            <value><fullName>ASD</fullName><default>false</default><label>ASD</label></value>
            <value><fullName>Cardinal</fullName><default>false</default><label>Cardinal</label></value>
            <value><fullName>McKesson</fullName><default>false</default><label>McKesson</label></value>
            <value><fullName>McKesson Plasma/Specialty</fullName><default>false</default><label>McKesson Plasma/Specialty</label></value>
            <value><fullName>Morris &amp; Dickson</fullName><default>false</default><label>Morris &amp; Dickson</label></value>
            <value><fullName>Oncology Supply</fullName><default>false</default><label>Oncology Supply</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>