force-app/main/default/objects/Account/fields/SP_Spectrum_Relationship__c.field-meta.xml
<CustomField>
    <fullName>SP_Spectrum_Relationship__c</fullName>
    <label>Spectrum Relationship</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>