force-app/main/default/objects/Account/fields/SP_System_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>SP_System_Account_Type__c</fullName>
    <label>Account Type - System</label>
    <length>40</length>
    <type>Text</type>
</CustomField>