force-app/main/default/objects/Account/fields/SP_Target__c.field-meta.xml
<CustomField>
    <fullName>SP_Target__c</fullName>
    <label>Target</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Tier 1</fullName><default>false</default><label>Tier 1</label></value>
            <value><fullName>Tier 2</fullName><default>false</default><label>Tier 2</label></value>
            <value><fullName>Tier 3</fullName><default>false</default><label>Tier 3</label></value>
            <value><fullName>Tier 4</fullName><default>false</default><label>Tier 4</label></value>
            <value><fullName>Commercial</fullName><default>false</default><label>Commercial</label></value>
            <value><fullName>Managed Medicaid</fullName><default>false</default><label>Managed Medicaid</label></value>
            <value><fullName>Medicare</fullName><default>false</default><label>Medicare</label></value>
            <value><fullName>State Medicaid</fullName><default>false</default><label>State Medicaid</label></value>
            <value><fullName>Health Exchange</fullName><default>false</default><label>Health Exchange</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>