force-app/main/default/objects/Account/fields/SP_Territory_Owner__c.field-meta.xml
<CustomField>
    <fullName>SP_Territory_Owner__c</fullName>
    <label>Territory Owner</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>