force-app/main/default/objects/Account/fields/SP_Value_Driven__c.field-meta.xml
<CustomField>
    <fullName>SP_Value_Driven__c</fullName>
    <label>Value Driven</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>