force-app/main/default/objects/Account/fields/SP_What_is_the_anticipated_timeline__c.field-meta.xml
<CustomField>
    <!-- PLACEHOLDER: this field was NOT found in Veeva's own Account describe.
         Type is an unverified guess (Text 255). Confirm with whoever owns the
         original HCO build before treating this as correct. -->
    <fullName>SP_What_is_the_anticipated_timeline__c</fullName>
    <label>SP What is the anticipated timeline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>