force-app/main/default/objects/Account/fields/State_Society__c.field-meta.xml
<CustomField>
    <fullName>State_Society__c</fullName>
    <label>State Society</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>CHOC</fullName><default>false</default><label>CHOC</label></value>
            <value><fullName>MOPS</fullName><default>false</default><label>MOPS</label></value>
            <value><fullName>SOAP</fullName><default>false</default><label>SOAP</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>