force-app/main/default/objects/Account/fields/Support_from_Executive_Team__c.field-meta.xml
<CustomField>
    <!-- PLACEHOLDER: this field was NOT found in Veeva's own Account describe.
         Type is an unverified guess (Text 255). Confirm with whoever owns the
         original HCO build before treating this as correct. -->
    <fullName>Support_from_Executive_Team__c</fullName>
    <label>Support from Executive Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>