force-app/main/default/objects/Account/fields/Support_from_FRM_s__c.field-meta.xml
<CustomField>
    <fullName>Support_from_FRM_s__c</fullName>
    <label>Support from FRM’s</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>1</fullName><default>false</default><label>1</label></value>
            <value><fullName>2</fullName><default>false</default><label>2</label></value>
            <value><fullName>3</fullName><default>false</default><label>3</label></value>
            <value><fullName>4</fullName><default>false</default><label>4</label></value>
            <value><fullName>5</fullName><default>false</default><label>5</label></value>
            <value><fullName>6</fullName><default>false</default><label>6</label></value>
            <value><fullName>7</fullName><default>false</default><label>7</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>